--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -191,7 +191,10 @@
     "category_fetch_error": "Fout bij ophalen van categorieën",
     "copied_to_clipboard": "Gekopieerd naar klembord!",
     "copy_failed": "Kopiëren mislukt",
-    "adventure_calendar": "Avonturenkalender"
+    "adventure_calendar": "Avonturenkalender",
+    "emoji_picker": "Emoji-kiezer",
+    "hide": "Verbergen",
+    "show": "Show"
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
@@ -255,7 +258,10 @@
     "profile_picture": "Profielfoto",
     "public_profile": "Openbaar profiel",
     "public_tooltip": "Met een openbaar profiel kunnen gebruikers collecties met u delen en uw profiel bekijken op de gebruikerspagina.",
-    "email_required": "E-mail is vereist"
+    "email_required": "E-mail is vereist",
+    "both_passwords_required": "Beide wachtwoorden zijn vereist",
+    "new_password": "Nieuw wachtwoord",
+    "reset_failed": "Kan het wachtwoord niet opnieuw instellen"
   },
   "users": {
     "no_users_found": "Er zijn geen gebruikers gevonden met openbare profielen."
