Add download adventures as ICS calendar

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -194,7 +194,8 @@
     "adventure_calendar": "Abenteuerkalender",
     "emoji_picker": "Emoji-Picker",
     "hide": "Verstecken",
-    "show": "Zeigen"
+    "show": "Zeigen",
+    "download_calendar": "Kalender herunterladen"
   },
   "home": {
     "desc_1": "Entdecken, planen und erkunden Sie mit Leichtigkeit",
