--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -217,6 +217,7 @@
 		"show": "Show",
 		"hide": "Hide",
 		"emoji_picker": "Emoji Picker",
+		"download_calendar": "Download Calendar",
 		"days": "days",
 		"activities": {
 			"general": "General 🌍",
