--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -241,7 +241,8 @@
     "adventure_calendar": "Calendario de aventuras",
     "emoji_picker": "Selector de emojis",
     "hide": "Esconder",
-    "show": "Espectáculo"
+    "show": "Espectáculo",
+    "download_calendar": "Descargar Calendario"
   },
   "worldtravel": {
     "all": "Todo",
