--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -194,7 +194,8 @@
     "adventure_calendar": "Calendrier d'aventure",
     "emoji_picker": "Sélecteur d'émoticônes",
     "hide": "Cacher",
-    "show": "Montrer"
+    "show": "Montrer",
+    "download_calendar": "Télécharger le calendrier"
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
