--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -194,7 +194,8 @@
     "adventure_calendar": "Calendario delle avventure",
     "emoji_picker": "Selettore di emoji",
     "hide": "Nascondere",
-    "show": "Spettacolo"
+    "show": "Spettacolo",
+    "download_calendar": "Scarica Calendario"
   },
   "home": {
     "desc_1": "Scopri, pianifica ed esplora con facilità",
