--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -194,7 +194,8 @@
     "adventure_calendar": "Avonturenkalender",
     "emoji_picker": "Emoji-kiezer",
     "hide": "Verbergen",
-    "show": "Show"
+    "show": "Show",
+    "download_calendar": "Agenda downloaden"
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
