--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -241,7 +241,8 @@
     "adventure_calendar": "Kalendarz przygód",
     "emoji_picker": "Wybór emoji",
     "hide": "Ukrywać",
-    "show": "Pokazywać"
+    "show": "Pokazywać",
+    "download_calendar": "Pobierz Kalendarz"
   },
   "worldtravel": {
     "country_list": "Lista krajów",
