--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -194,7 +194,8 @@
     "adventure_calendar": "Äventyrskalender",
     "emoji_picker": "Emoji-väljare",
     "hide": "Dölja",
-    "show": "Visa"
+    "show": "Visa",
+    "download_calendar": "Ladda ner kalender"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
