--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -194,7 +194,8 @@
     "adventure_calendar": "冒险日历",
     "emoji_picker": "表情符号选择器",
     "hide": "隐藏",
-    "show": "展示"
+    "show": "展示",
+    "download_calendar": "下载日历"
   },
   "home": {
     "desc_1": "轻松发现、规划和探索",
