Add geographic coordinates to Transportation model and update related components

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -216,8 +216,18 @@
 		"copy_failed": "Copy failed",
 		"show": "Show",
 		"hide": "Hide",
+		"clear_location": "Clear Location",
+		"starting_airport": "Starting Airport",
+		"ending_airport": "Ending Airport",
+		"no_location_found": "No location found",
+		"from": "From",
+		"to": "To",
+		"start": "Start",
+		"end": "End",
 		"emoji_picker": "Emoji Picker",
 		"download_calendar": "Download Calendar",
+		"date_information": "Date Information",
+		"flight_information": "Flight Information",
 		"preview": "Preview",
 		"md_instructions": "Write your markdown here...",
 		"days": "days",
