Add delete confirmation modals for notes, checklists, and transportation

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -64,6 +64,12 @@
 		"no_image_found": "No image found",
 		"collection_link_error": "Error linking adventure to collection",
 		"adventure_delete_confirm": "Are you sure you want to delete this adventure? This action cannot be undone.",
+		"checklist_delete_confirm": "Are you sure you want to delete this checklist? This action cannot be undone.",
+		"note_delete_confirm": "Are you sure you want to delete this note? This action cannot be undone.",
+		"transportation_delete_confirm": "Are you sure you want to delete this transportation? This action cannot be undone.",
+		"delete_checklist": "Delete Checklist",
+		"delete_note": "Delete Note",
+		"delete_transportation": "Delete Transportation",
 		"open_details": "Open Details",
 		"edit_adventure": "Edit Adventure",
 		"remove_from_collection": "Remove from Collection",
