Add region map to worldtravel region page

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -103,6 +103,7 @@
 		"rating": "Rating",
 		"my_images": "My Images",
 		"add_an_activity": "Add an activity",
+		"show_region_labels": "Show Region Labels",
 		"no_images": "No Images",
 		"upload_images_here": "Upload images here",
 		"share_adventure": "Share this Adventure!",
