Update note and checklist modals as well as add an unlinked state in the collection page for better organization

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -235,6 +235,7 @@
 		"download_calendar": "Download Calendar",
 		"date_information": "Date Information",
 		"flight_information": "Flight Information",
+		"out_of_range": "Not in itinerary date range",
 		"preview": "Preview",
 		"md_instructions": "Write your markdown here...",
 		"days": "days",
@@ -384,6 +385,7 @@
 		"open": "Open",
 		"failed_to_save": "Failed to save note",
 		"note_editor": "Note Editor",
+		"note_viewer": "Note Viewer",
 		"editing_note": "Editing note",
 		"content": "Content",
 		"save": "Save",
@@ -396,7 +398,9 @@
 		"checklist_delete_error": "Error deleting checklist",
 		"failed_to_save": "Failed to save checklist",
 		"checklist_editor": "Checklist Editor",
+		"checklist_viewer": "Checklist Viewer",
 		"editing_checklist": "Editing checklist",
+		"new_checklist": "New Checklist",
 		"item": "Item",
 		"items": "Items",
 		"add_item": "Add Item",
